// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Address.vue Should display EOA accounts stats 1`] = `
<div class="container container--fluid" hash="0x123">
  <div class="row mb-1">
    <!---->
    <div class="col-lg-7 col-12">
      <div class="row">
        <div class="col col-12">
          <div class="v-card v-sheet v-sheet--outlined theme--light">
            <div class="v-card__subtitle">Balance</div>
            <div align="center" class="v-card__text text-h4">
              0.00000000000001 Ether
            </div>
          </div>
        </div>
      </div>
      <div class="row">
        <div class="col-lg-6 col-12">
          <div class="v-card v-sheet v-sheet--outlined theme--light" style="height: 100%;">
            <div class="v-card__subtitle">Transactions</div>
            <div align="center" class="v-card__text text-h4">
              1<i aria-hidden="true" class="v-icon notranslate mdi mdi-arrow-up-thin theme--light"></i>
              <hr role="separator" aria-orientation="vertical" class="mx-4 v-divider v-divider--vertical theme--light">
              2<i aria-hidden="true" class="v-icon notranslate mdi mdi-arrow-down-thin theme--light"></i>
            </div>
          </div>
        </div>
        <div class="col-lg-6 col-12">
          <div class="v-card v-sheet v-sheet--outlined theme--light" style="height: 100%;">
            <div class="v-card__subtitle">ERC-20 Transfers</div>
            <div align="center" class="v-card__text text-h4">
              3<i aria-hidden="true" class="v-icon notranslate mdi mdi-arrow-up-thin theme--light"></i>
              <hr role="separator" aria-orientation="vertical" class="mx-4 v-divider v-divider--vertical theme--light"> 4<i aria-hidden="true" class="v-icon notranslate mdi mdi-arrow-down-thin theme--light"></i>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="v-tabs theme--light">
    <div role="tablist" class="v-item-group theme--light v-slide-group v-tabs-bar v-tabs-bar--is-mobile primary--text">
      <div class="v-slide-group__prev v-slide-group__prev--disabled">
        <transition-stub name="fade-transition"></transition-stub>
      </div>
      <div class="v-slide-group__wrapper">
        <div class="v-slide-group__content v-tabs-bar__content">
          <div class="v-tabs-slider-wrapper" style="transition: none;">
            <div class="v-tabs-slider"></div>
          </div><a tabindex="0" href="#transactions" aria-selected="true" role="tab" class="v-tab v-tab--active" id="transactionsTab">Transactions</a> <a tabindex="0" href="#transfers" aria-selected="false" role="tab" class="v-tab" id="transfersTab">Transfers</a> <a tabindex="0" href="#erc20Balances" aria-selected="false" role="tab" class="v-tab" id="erc20BalancesTab">ERC-20 Tokens</a> <a tabindex="0" href="#erc721Balances" aria-selected="false" role="tab" class="v-tab" id="erc721BalancesTab">ERC-721 Tokens</a>
        </div>
      </div>
      <div class="v-slide-group__next v-slide-group__next--disabled">
        <transition-stub name="fade-transition"></transition-stub>
      </div>
    </div>
  </div>
  <div class="v-window v-item-group theme--light v-tabs-items">
    <div class="v-window__container">
      <transition-stub name="">
        <div class="v-window-item v-window-item--active" id="transactions">
          <address-transactions-list-stub></address-transactions-list-stub>
        </div>
      </transition-stub>
      <transition-stub name="">
        <!---->
      </transition-stub>
      <transition-stub name="">
        <!---->
      </transition-stub>
      <transition-stub name="">
        <!---->
      </transition-stub>
    </div>
  </div>
</div>
`;

exports[`Address.vue Should display ERC20 contract stats 1`] = `
<div class="container container--fluid" hash="0x123">
  <div class="row mb-1">
    <div class="col-lg-5 col-12">
      <div class="v-card v-sheet v-sheet--outlined theme--light" style="height: 100%;">
        <div class="v-card__title">ERC20 Contract</div>
        <div class="v-card__subtitle"><span class="success mr-2 v-chip v-chip--no-color theme--light v-size--x-small"><span class="v-chip__content">
                        ERC 20
                    </span></span></div>
        <div class="v-card__text">
          <div class="row">
            <div class="col col-6"><small>Token Name</small><br> <span class="ml-2"><hash-link-stub withtokenname="true" withname="true" hash="0x123" type="token"></hash-link-stub></span></div>
            <div class="col col-6"><small>Token Symbol</small><br> <span class="text-h6 ml-2">ERC</span></div>
            <div class="col col-6"><small>Contract</small><br>
              <hash-link-stub withname="true" hash="0x123" type="contract" class="ml-2"></hash-link-stub>
            </div>
            <div class="col col-6"><small>Contract Creation</small><br> <span class="ml-2">N/A</span></div>
          </div>
        </div>
      </div>
    </div>
    <div class="col-lg-7 col-12">
      <div class="row">
        <div class="col col-12">
          <div class="v-card v-sheet v-sheet--outlined theme--light">
            <div class="v-card__subtitle">Balance</div>
            <div align="center" class="v-card__text text-h4">
              0.00000000000001 Ether
            </div>
          </div>
        </div>
      </div>
      <div class="row">
        <div class="col-lg-6 col-12">
          <div class="v-card v-sheet v-sheet--outlined theme--light" style="height: 100%;">
            <div class="v-card__subtitle">Transactions</div>
            <div align="center" class="v-card__text text-h4">
              <!---->
              2
              <!---->
            </div>
          </div>
        </div>
        <div class="col-lg-6 col-12">
          <div class="v-card v-sheet v-sheet--outlined theme--light" style="height: 100%;">
            <div class="v-card__subtitle">ERC-20 Transfers</div>
            <div align="center" class="v-card__text text-h4">
              3<i aria-hidden="true" class="v-icon notranslate mdi mdi-arrow-up-thin theme--light"></i>
              <hr role="separator" aria-orientation="vertical" class="mx-4 v-divider v-divider--vertical theme--light"> 4<i aria-hidden="true" class="v-icon notranslate mdi mdi-arrow-down-thin theme--light"></i>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="v-tabs theme--light">
    <div role="tablist" class="v-item-group theme--light v-slide-group v-tabs-bar v-tabs-bar--is-mobile primary--text" data-booted="true">
      <div class="v-slide-group__prev v-slide-group__prev--disabled">
        <transition-stub name="fade-transition"></transition-stub>
      </div>
      <div class="v-slide-group__wrapper">
        <div class="v-slide-group__content v-tabs-bar__content">
          <div class="v-tabs-slider-wrapper" style="height: 2px; left: 0px; width: 0px;">
            <div class="v-tabs-slider"></div>
          </div><a tabindex="0" href="#transactions" aria-selected="true" role="tab" class="v-tab v-tab--active" id="transactionsTab">Transactions</a> <a tabindex="0" href="#transfers" aria-selected="false" role="tab" class="v-tab" id="transfersTab">Transfers</a> <a tabindex="0" href="#erc20Balances" aria-selected="false" role="tab" class="v-tab" id="erc20BalancesTab">ERC-20 Tokens</a> <a tabindex="0" href="#erc721Balances" aria-selected="false" role="tab" class="v-tab" id="erc721BalancesTab">ERC-721 Tokens</a>
        </div>
      </div>
      <div class="v-slide-group__next v-slide-group__next--disabled">
        <transition-stub name="fade-transition"></transition-stub>
      </div>
    </div>
  </div>
  <div class="v-window v-item-group theme--light v-tabs-items">
    <div class="v-window__container">
      <transition-stub name="v-window-x-transition">
        <div class="v-window-item v-window-item--active" id="transactions">
          <address-transactions-list-stub></address-transactions-list-stub>
        </div>
      </transition-stub>
      <transition-stub name="v-window-x-transition">
        <!---->
      </transition-stub>
      <transition-stub name="v-window-x-transition">
        <!---->
      </transition-stub>
      <transition-stub name="v-window-x-transition">
        <!---->
      </transition-stub>
    </div>
  </div>
</div>
`;

exports[`Address.vue Should display ERC721 contract stats 1`] = `
<div class="container container--fluid" hash="0x123">
  <div class="row mb-1">
    <div class="col-lg-5 col-12">
      <div class="v-card v-sheet v-sheet--outlined theme--light" style="height: 100%;">
        <div class="v-card__title">ERC721 Contract</div>
        <div class="v-card__subtitle"><span class="success mr-2 v-chip v-chip--no-color theme--light v-size--x-small"><span class="v-chip__content">
                        ERC 721
                    </span></span></div>
        <div class="v-card__text">
          <div class="row">
            <div class="col col-6"><small>Token Name</small><br> <span class="ml-2"><hash-link-stub withtokenname="true" withname="true" hash="0x123" type="token"></hash-link-stub></span></div>
            <div class="col col-6"><small>Token Symbol</small><br> <span class="text-h6 ml-2">ERC</span></div>
            <div class="col col-6"><small>Contract</small><br>
              <hash-link-stub withname="true" hash="0x123" type="contract" class="ml-2"></hash-link-stub>
            </div>
            <div class="col col-6"><small>Contract Creation</small><br> <span class="ml-2">N/A</span></div>
          </div>
        </div>
      </div>
    </div>
    <div class="col-lg-7 col-12">
      <div class="row">
        <div class="col col-12">
          <div class="v-card v-sheet v-sheet--outlined theme--light">
            <div class="v-card__subtitle">Balance</div>
            <div align="center" class="v-card__text text-h4">
              0.00000000000001 Ether
            </div>
          </div>
        </div>
      </div>
      <div class="row">
        <div class="col-lg-6 col-12">
          <div class="v-card v-sheet v-sheet--outlined theme--light" style="height: 100%;">
            <div class="v-card__subtitle">Transactions</div>
            <div align="center" class="v-card__text text-h4">
              <!---->
              2
              <!---->
            </div>
          </div>
        </div>
        <div class="col-lg-6 col-12">
          <div class="v-card v-sheet v-sheet--outlined theme--light" style="height: 100%;">
            <div class="v-card__subtitle">ERC-20 Transfers</div>
            <div align="center" class="v-card__text text-h4">
              3<i aria-hidden="true" class="v-icon notranslate mdi mdi-arrow-up-thin theme--light"></i>
              <hr role="separator" aria-orientation="vertical" class="mx-4 v-divider v-divider--vertical theme--light"> 4<i aria-hidden="true" class="v-icon notranslate mdi mdi-arrow-down-thin theme--light"></i>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="v-tabs theme--light">
    <div role="tablist" class="v-item-group theme--light v-slide-group v-tabs-bar v-tabs-bar--is-mobile primary--text">
      <div class="v-slide-group__prev v-slide-group__prev--disabled">
        <transition-stub name="fade-transition"></transition-stub>
      </div>
      <div class="v-slide-group__wrapper">
        <div class="v-slide-group__content v-tabs-bar__content">
          <div class="v-tabs-slider-wrapper" style="transition: none;">
            <div class="v-tabs-slider"></div>
          </div><a tabindex="0" href="#transactions" aria-selected="true" role="tab" class="v-tab v-tab--active" id="transactionsTab">Transactions</a> <a tabindex="0" href="#transfers" aria-selected="false" role="tab" class="v-tab" id="transfersTab">Transfers</a> <a tabindex="0" href="#erc20Balances" aria-selected="false" role="tab" class="v-tab" id="erc20BalancesTab">ERC-20 Tokens</a> <a tabindex="0" href="#erc721Balances" aria-selected="false" role="tab" class="v-tab" id="erc721BalancesTab">ERC-721 Tokens</a>
        </div>
      </div>
      <div class="v-slide-group__next v-slide-group__next--disabled">
        <transition-stub name="fade-transition"></transition-stub>
      </div>
    </div>
  </div>
  <div class="v-window v-item-group theme--light v-tabs-items">
    <div class="v-window__container">
      <transition-stub name="">
        <div class="v-window-item v-window-item--active" id="transactions">
          <address-transactions-list-stub></address-transactions-list-stub>
        </div>
      </transition-stub>
      <transition-stub name="">
        <!---->
      </transition-stub>
      <transition-stub name="">
        <!---->
      </transition-stub>
      <transition-stub name="">
        <!---->
      </transition-stub>
    </div>
  </div>
</div>
`;
